# pico_go_project

./: .gitignore  README.md
micro_ros_raspberrypi_pico_sdk/: CMakeLists.txt  README.md  available_ros2_types  built_packages  main.cpp  main2.cpp  pico_micro_ros_example.cpp  pico_uart_transports.h  pico_wifi_transport.c  pico_wifi_transport.h  picow_udp_transports.c  picow_udp_transports.h  wifi_config.h
micro_ros_raspberrypi_pico_sdk/.github/workflows/: ci.yml
micro_ros_raspberrypi_pico_sdk/lwip_config/: lwipopts.h
micro_ros_raspberrypi_pico_sdk/lwip_config/arch/: cc.h
micro_ros_raspberrypi_pico_sdk/motor_control/: motor.cpp  motor.h
micro_ros_raspberrypi_pico_sdk/src/: main.cpp  mainS.cpp
micro_ros_raspberrypi_pico_sdk/src/display/: font.h  st7789.c  st7789.h
micro_ros_raspberrypi_pico_sdk/src/line_follow/: InfraredSensor.cpp  InfraredSensor.h
micro_ros_raspberrypi_pico_sdk/src/motor_control/: Motor.cpp  Motor.h
micro_ros_raspberrypi_pico_sdk/src/obstacle_detection/: UltrasonicSensor.cpp
micro_ros_raspberrypi_pico_sdk/src/wireless_communication/: picow_udp_transports.c  picow_udp_transports.h  wifi_config.h
micro_ros_raspberrypi_pico_sdk/test/: main1.cpp  mainLcd.cpp
micro_ros_raspberrypi_pico_sdk/wireless_communication/: lwipopts.h  wifi_config.h
pico_test/ros_ws/install/: local_setup.sh  setup.sh
pico_test/ros_ws/install/motor_controller/share/motor_controller/: package.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/motor_controller/share/motor_controller/: package.sh
ros2_ws/install/robots_control/lib/robots_control/: obstacle_monitor  send_route
ros2_ws/install/robots_control/share/robots_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/motor_controller/: package.xml  setup.py
ros2_ws/src/motor_controller/motor_controller/: motor_controller.py
ros2_ws/src/robots_control/: setup.cfg  setup.py
ros2_ws/src/robots_control/install/: local_setup.sh  setup.sh
ros2_ws/src/robots_control/install/robots_control/lib/robots_control/: obstacle_monitor = robots_control.obstacle_monitor:mainsend_route
ros2_ws/src/robots_control/install/robots_control/share/robots_control/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/robots_control/log/: latest_build
ros2_ws/src/robots_control/robots_control/: send_route.py
ros_ws/log/: latest_build
uros_ws/: CMakeLists.txt  README.md  package.xml
uros_ws/src/: main.cpp  mainS.cpp  ws2812.pio
uros_ws/src/display/: display_manager.cpp  display_manager.h  font.c  st7789.cpp  st7789.h
uros_ws/src/line_follow/: InfraredSensor.cpp
uros_ws/src/motor_control/: Motor.cpp  Motor.h
uros_ws/src/obstacle_detection/: UltrasonicSensor.h
uros_ws/src/wireless_communication/: lwipopts.h  picow_udp_transports.c  wifi_config.h
